update uv
